Fixed confusion matrix

--- a/miniProject3 alt.qmd
+++ b/miniProject3 alt.qmd
@@ -107,5 +107,5 @@ test_predictions
 {r}
 # generate a confusion matrix
 test_predictions %>% 
-  conf_mat(truth = 1, estimate = .pred_class)
+  conf_mat(truth = DEATH_EVENT, estimate = .pred_class)
 
